syntax="proto3";

package auth.service;

import "models.proto";

option go_package= "authpb";

service Auth {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
}

message Empty{}

message AuthenticateRequest {
  string Email = 1;
  string Challenge = 2;
}

message AuthenticateResponse {
  string UID = 1;
}

message RegisterRequest{
  string Email = 1;
  string Password = 2;
}

message RegisterResponse{
  string UID = 1;
  string Token = 2;
}

message DeleteRequest {
  string Email = 1;
  string Challenge = 2;
}

message DeleteResponse {}

message ChangePasswordRequest {
  string Email = 1;
  string Challenge = 2;
  string NewPassword = 3;
}

message ChangePasswordResponse {}

message LookupRequest{
  string Email = 1;
}

message LookupResponse{
  bool Exists = 1;
}

